--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>IMC - Calculo de IMC</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/LeticiaMagrin/Calculo-de-IMC/main/style.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <div id="resultado"></div>
   </section>
 
-  <script src="./js/script.js"></script>
+<script href="https://raw.githubusercontent.com/LeticiaMagrin/Calculo-de-IMC/main/script.js"></script>
 </body>
 
 </html>
